[project]
name = "fast-volleyball-tracking-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filterpy>=1.4.5",
    "onnxruntime>=1.22.0",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "scipy>=1.16.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]


[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.22.0",  # GPU-версия ONNX
]
